updated to include clientSecret
